--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <script src="./gallery.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="dist/basicLightbox.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <ul class="gallery"></ul>
+    <script src="dist/basicLightbox.min.js"></script>
+    <script src="./gallery.js"></script>
 </body>
 </html>
 
