--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     , initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="dist/basicLightbox.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <ul class="gallery"></ul>
     <!-- <script src="dist/basicLightbox.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
     <script src="./gallery.js"></script>
 </body>
 </html>
